--- a/index.html
+++ b/index.html
@@ -212,9 +212,11 @@
                 <div class="work">
                     <img src="images/work-2.png" >
                     <div class="layer">
-                        <h3> Food order web App</h3>
-                        <p>This app connects you to the talented people around the world .download it from play store</p>
-                        <a href="#"> <i class="fa-solid fa-code"></i></a>
+                        <h3> Book Notes Taking web App</h3>
+                        <p>this bookwrack project is a note taking app ,where we
+                            could add book titles, author book names, and book
+                            summaries. </p>
+                        <a href="https://bookrack-app.vercel.app/"> <i class="fa-solid fa-code"></i></a>
                     </div>
                 </div>
 
@@ -250,7 +252,7 @@
                         <a href="https://www.linkedin.com/in/mohamed-ashik-m-32b278231/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf"  class="btn btn2" download=""> download CV</a>
+                    <a href="images/Ashik.resumefd (2).pdf" class="btn btn2" download=""> download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
