--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <a href="images/Ashik.resumefd (2).pdf" class="btn btn2" download=""> download CV</a>
+                    <a href="images/Reactdev.pdf.pdf" class="btn btn2" download=""> download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
